# DeepHoldem

./: .env  .gitignore  TODO  evaluation_vs_mini.csv  evaluation_vs_random.csv  example_trajectory_processing.py  game_evaluator.py  main.py  outputs_Debug  parallel_worker.py  plot_roi.py  pyproject.toml  requirements.txt  scripts.py  test_llm_models.py
agents/: ac_agent.py  agent_actor_critic.py  agent_keypress.py  agent_random.py  keypress_agent.py  llm_agent.py  network.py  random_agent.py  train_actor_critic.py
gym_env/: __init__.py  cycle.py  enums.py  env.py
tools/: helper.py
