[project]
name = "neuron-poker"
version = "0.1.0"
description = ""
authors = [{ name = "Nicolas Dickreuter", email = "dickreuter@gmail.com" }]
requires-python = "~=3.11"
readme = "readme.rst"
dependencies = [
    "cppimport>=22.8.2,<23",
    "docopt>=0.6.2,<0.7",
    "gymnasium>=0.29.1",  # Replaces gym
    "matplotlib>=3.8.2,<4",
    "mpld3>=0.5.10,<0.6",
    "pandas>=2.2.0,<3",
    "pybind11>=2.11.1,<3",
    "pydocstyle>=6.3.0,<7",
    "pyglet==1.5.15",
    "pylint>=3.0.3,<4",
    "setuptools>=80.9.0",
    "numpy>=1.18.0,<2.0",  # Pinned for Gymnasium compatibility
    "cloudpickle>=1.2.0",
    "shimmy>=0.2.1",  # For Gym->Gymnasium compatibility
    "torch>=2.0.0",  # For deep learning models
]

[project.scripts]
# Main game modes
poker-random = "scripts:main_random"
poker-keypress = "scripts:main_keypress" 


[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


